added additional facebook requests
